--- a/Project/Client/Views/Product/ProductDetail.cshtml
+++ b/Project/Client/Views/Product/ProductDetail.cshtml
@@ -286,24 +286,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Nút Like và Dislike nằm ở phía trên bên phải -->
-                    @* <form asp-controller="Product" method="post" class="col-md-2 d-flex justify-content-between" style="margin-top:2vw;">
-                <input type="hidden" name="ProductId" value="@product.Id" />
-
-                <!-- Nút Like với số lượt like -->
-                <button type="submit" name="action" value="like" class="sci-fi-btn like-btn  ">
-                <i class="fas fa-thumbs-up"></i>
-                <span class="like-count">
-                @(product.Interactions.NumberOfLikes == 0 ? "0" : product.Interactions.NumberOfLikes.ToString())
-                </span>
-                </button>
-
-                <!-- Nút Dislike -->
-                <button type="submit" name="action" value="dislike" class="sci-fi-btn dislike-btn ms-2  ">
-                <i class="fas fa-thumbs-down"></i>
-                </button>
-                </form> *@
-
+                   
                     <div class="col-md-2 d-flex justify-content-between" style="margin-top:2vw;">
                         <!-- Form for Increasing Like -->
                         <form asp-action="IncreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;" class="like-form2 ">
@@ -368,13 +351,9 @@
                             @* Free *@
                             @if (Model.Prod.Discount == 100 || Model.Prod.Price == 0)
                             {
-                                @* <div class="product-price-container"> *@
-                                    @* <div class="discount-section"> *@
-                                        <div class="price-section">
-                                            <span class="discounted-price">Free</span>
-                                        </div>
-                                    @* </div> *@
-                                @* </div> *@
+                                <div class="price-section">
+                                    <span class="discounted-price">Free</span>
+                                </div>
                             }
                             else
                             {
@@ -414,15 +393,7 @@
 
                     </div>
                 }
-                //Free
-                @* <div class="product-price-container">
-            <div class="discount-section">
-            <div class="price-section">
-            <span class="discounted-price">Free</span>
-            </div>
-            </div>
-            <a href="#" class="btn btn-success align-content-center w-25 fw-bold">Play</a>
-            </div> *@
+                
 
 
 
@@ -512,7 +483,7 @@
             {
                 var product = Model.Prod;
                 var cate = product.Categories.FirstOrDefault()?.CategoryName;
-                <div class="mt-3">
+                <div class="mt-3" style="width:100%;">
                     <section id="popular">
                         <div class="d-flex justify-content-between align-items-center">
                             <h2 class="same" style="font-size:2vw;">Same category</h2>
@@ -522,7 +493,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="wrapper_other">
+                        <div class="wrapper_other" >
                             @if (Model.Product != null)
                             {
                                 // Lấy một danh mục ngẫu nhiên từ sản phẩm hiện tại
