--- a/Project/Client/Views/Admin/AdminDashboard.cshtml
+++ b/Project/Client/Views/Admin/AdminDashboard.cshtml
@@ -149,17 +149,17 @@
                         <form id="statisticsForm" class="d-flex">
                             <div class="mb-3 mx-2 mt-2">
                                 <label for="textInput" class="form-label sr-only">Nhập nội dung</label>
-                                <input type="text" class="form-control form-control-sm" id="textInput" name="UserName" placeholder="Nhập vào đây" required>
+                                <input type="text" class="form-control form-control-sm" id="textInput" name="userName" placeholder="Nhập vào đây" required>
                             </div>
                             <div class="mb-3 mx-2 mt-2">
                                 <label for="monthInput" class="form-label sr-only">Chọn tháng</label>
-                                <input type="month" class="form-control form-control-sm" id="monthInput" name="CreateAt" required>
+                                <input type="month" class="form-control form-control-sm" id="monthInput" name="createAt" required>
 
                             </div>
                             <button type="submit" class="btn btn-danger btn-sm">Submit</button>
                         </form>
 
-                    </div>
+                    </div>  
                 </div>
 
                 <!-- Vùng để hiển thị kết quả khi submit -->
