--- a/Project/Client/Views/User/UploadProduct.cshtml
+++ b/Project/Client/Views/User/UploadProduct.cshtml
@@ -292,8 +292,8 @@
                     {
                         <label class="form-label fw-bold fs-6">Status</label>
                         <select asp-for="@Model.Status" class="form-select" style="border: 1px solid #00A97F; border-radius: 8px;" disabled>
-                            <option value="0">Inactive</option>
-                            <option value="1" selected>Active</option>
+                            <option value="0" selected>Inactive</option>
+                            <option value="1">Active</option>
                             <option value="2">Block</option>
                             <option value="3">Deleted</option>
                         </select>
