--- a/Project/Client/Views/Admin/CommentManager.cshtml
+++ b/Project/Client/Views/Admin/CommentManager.cshtml
@@ -179,7 +179,7 @@
                     </span>
                 </form>
 
-                <button class="btn btn-success" data-toggle="modal" data-target="#modalCategory">+ Add</button>
+               @*  <button class="btn btn-success" data-toggle="modal" data-target="#modalCategory">+ Add</button> *@
 
             </div>
         </div>
