--- a/Project/Client/Views/Admin/ReportManager.cshtml
+++ b/Project/Client/Views/Admin/ReportManager.cshtml
@@ -104,13 +104,13 @@
 <div class="container mt-5">
     <div class="container mt-4">
         <!-- Thanh tìm kiếm và nút Thêm -->
-        <div class="d-flex justify-content-between mb-3">
+        @* <div class="d-flex justify-content-between mb-3">
             <form asp-action="SearchCmt" asp-controller="Admin" method="post" class="d-flex gap-2">
                 <input class="form-control" type="text" placeholder="Search by username..." name="searchString" style="width: 300px;" /> <!-- Tăng width cho input tên người dùng -->
                 <button class="btn btn-primary" style="width: 150px;" type="submit">Search</button>
             </form>
         </div>
-
+ *@
         @* <div id="checkBoxBar" style="display:none">
             <div class="text-end m-2 d-flex">
                 <button class="btn btn-success mx-2 w-100">Public All</button>
