--- a/Project/Client/Views/Product/ProductDetail.cshtml
+++ b/Project/Client/Views/Product/ProductDetail.cshtml
@@ -570,7 +570,7 @@
                                                             <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@products.Id" class="ms-3 col-md-5 text-center btn_orther">Read More</a>
                                                             <div class="col-md-3"></div>
                                                             @* Day la trai tym ne *@
-                                                            <div title="Wishlist" class="col-md-1 heart-container">
+                                                            @* <div title="Wishlist" class="col-md-1 heart-container">
                                                                 <form id="wishlistForm" method="post">
                                                                     <input type="hidden" name="ProductId" id="ProductId" value="@product.Id" />
                                                                     <input type="hidden" name="ProductName" id="ProductName" value="@product.Name" />
@@ -615,7 +615,7 @@
                                                                         </svg>
                                                                     </div>
                                                                 </form>
-                                                            </div>
+                                                            </div> *@
                                                         </div>
                                                     </div>
                                                 </div>
