--- a/Project/Client/Views/User/Register.cshtml
+++ b/Project/Client/Views/User/Register.cshtml
@@ -40,8 +40,8 @@
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             <div class="d-flex justify-content-between mb-3">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="rememberMe">
-                    <label class="form-check-label text-black-50" for="rememberMe">
+                    <input class="form-check-input" required type="checkbox" value="" id="policy">
+                    <label class="form-check-label text-black-50" for="policy">
                         I agree to the terms
                     </label>
                 </div>
