--- a/Project/Client/Views/Product/ProductDetail.cshtml
+++ b/Project/Client/Views/Product/ProductDetail.cshtml
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                     </div>
-                   
+
                     <div class="col-md-2 d-flex justify-content-between" style="margin-top:2vw;">
                         <!-- Form for Increasing Like -->
                         <form asp-action="IncreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;" class="like-form2 ">
@@ -318,30 +318,44 @@
 
                 <p>by @product.UserName</p>
 
-                @if (LinkDownload != null)
+                @if (HasOwned)
                 {
-                    @if (LinkDownload.Count != 0)
+                    @if (LinkDownload != null)
                     {
-                        <div class="product-price-container">
-                            <div class="discount-section">
-                                <div class="price-section">
-                                    <span class="discounted-price">Owned</span>
+                        @if (LinkDownload.Count != 0)
+                        {
+                            <div class="product-price-container">
+                                <div class="discount-section">
+                                    <div class="price-section">
+                                        <span class="discounted-price">Owned</span>
+                                    </div>
                                 </div>
+                                <a data-bs-toggle="modal" data-bs-target="#downloadModal" class="btn btn-success align-content-center w-25 fw-bold">Play</a>
                             </div>
-                            <a data-bs-toggle="modal" data-bs-target="#downloadModal" class="btn btn-success align-content-center w-25 fw-bold">Play</a>
-                        </div>
+                        }
                     }
                 }
                 else if (product.UserName == username)
                 {
-                    <div class="product-price-container">
-                        <div class="discount-section">
-                            <div class="price-section">
-                                <span class="discounted-price">Owned</span>
+                    @if (LinkDownload != null)
+                    {
+                        @if (LinkDownload.Count != 0)
+                        {
+                            <div class="product-price-container">
+                                <div class="discount-section">
+                                    <div class="price-section">
+                                        <span class="discounted-price">Owned</span>
+                                    </div>
+                                </div>
+                                <a data-bs-toggle="modal" data-bs-target="#downloadModal" class="btn btn-success align-content-center w-25 fw-bold">Play</a>
+
+                                @if (product.Status != Client.Models.Enum.ProductEnum.ProductStatus.Active)
+                                {
+                                    <h3> This game has been <span>@Model.Prod.Status</span> </h3>
+                                }
                             </div>
-                        </div>
-                        <a data-bs-toggle="modal" data-bs-target="#downloadModal" class="btn btn-success align-content-center w-25 fw-bold">Play</a>
-                    </div>
+                        }       
+                    }
                 }
                 else
                 {
@@ -389,11 +403,11 @@
                         {
                             <h1> This game has been <span>@Model.Prod.Status</span> </h1>
                         }
-                        
+
 
                     </div>
                 }
-                
+
 
 
 
@@ -493,7 +507,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="wrapper_other" >
+                        <div class="wrapper_other">
                             @if (Model.Product != null)
                             {
                                 // Lấy một danh mục ngẫu nhiên từ sản phẩm hiện tại
@@ -1004,13 +1018,13 @@
                                 <a class="btn btn-success me-3" href="@item.Url">Download</a>
 
                                 <!-- File Info -->
-                                <div class="align-content-center"> 
+                                <div class="align-content-center">
                                     <span class="d-inline-block text-truncate" style="max-width: 300px;">@item.Url</span>
                                     @* <p class="mb-1 text-secondary">363 MB</p> *@
-@*                                     <div>
-                                        <!-- Platform Icon -->
-                                        <i class="bi bi-windows fs-5 text-success" title="Windows"></i>
-                                    </div> *@
+                                    @*                                     <div>
+                        <!-- Platform Icon -->
+                        <i class="bi bi-windows fs-5 text-success" title="Windows"></i>
+                        </div> *@
                                 </div>
                             </div>
                         }
