update link localhost

--- a/Project/Client/Views/Order/PaymentFailure.cshtml
+++ b/Project/Client/Views/Order/PaymentFailure.cshtml
@@ -4,8 +4,8 @@
     </div>
     <h1>Payment Failed</h1>
     <p>Something went wrong with your payment. Please try again or contact support if the issue persists.</p>
-    <a asp-action="Index" asp-controller="Home" class="btn retry-btn">Return to home</a>
-    <a class="btn contact-btn w-auto">Contact Support</a>
+    <a asp-action="Index" asp-controller="Home" class="btn retry-btn">Home</a>
+    <a asp-action="ContactUs" asp-controller="G4T" class="btn contact-btn w-auto">Contact Support</a>
 </div>
 
 <style>
