--- a/Project/Client/Views/Product/Product.cshtml
+++ b/Project/Client/Views/Product/Product.cshtml
@@ -125,101 +125,105 @@
 
 
         <div class="me-1">
-            <div class="d-flex flex-wrap">
+            <div class="wrapper_other">
                 @if (Model.Product != null)
                 {
                     foreach (var product in Model.Product)
                     {
-                        <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="card_other mt-4 text-decoration-none" style="color: inherit;">
-                            @if (product.Links != null)
-                            {
-                                string firstImageUrl = null;
+                        <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="col-3 col-sm-3 col-md-3 mt-4 text-decoration-none" style="color: inherit;">
 
-                                foreach (var link in product.Links)
+                            <div class="card_other1">
+                                @if (product.Links != null)
                                 {
-                                    if (link.Url.Contains("cloudinary"))
+                                    string firstImageUrl = null;
+
+                                    foreach (var link in product.Links)
                                     {
-                                        firstImageUrl = link.Url;
-                                        break;
+                                        if (link.Url.Contains("cloudinary"))
+                                        {
+                                            firstImageUrl = link.Url;
+                                            break;
+                                        }
+                                    }
+
+                                    if (firstImageUrl != null)
+                                    {
+                                        <img src="@firstImageUrl" alt="Cloudinary Image" />
                                     }
                                 }
+                                <div class="info_other">
+                                    <h4>@product.Name</h4>
+                                    <p>
+                                        @(product.Description.Length > 100
+                                            ? product.Description.Substring(0, 100) + "..."
+                                            : product.Description)
+                                    </p>
+                                    <div class="row d-flex align-items-center justify-content-between">
+                                        <div class="col-5 col-sm-5 col-md-5 text-center btn_orther">Read More</div>
+                                        <div class="col-4 col-sm-4 col-md-4 col-md-4"></div>
+                                        <div title="Wishlist" class="col-1 col-sm-1 col-md-1 col-md-1 heart-container">
+                                            <form id="wishlistForm" method="post">
+                                                <input type="hidden" name="ProductId" id="ProductId" value="@product.Id" />
+                                                <input type="hidden" name="ProductName" id="ProductName" value="@product.Name" />
+                                                <input type="hidden" name="ProductPrice" id="ProductPrice" value="@product.Price" />
 
-                                if (firstImageUrl != null)
-                                {
-                                    <img src="@firstImageUrl" alt="Cloudinary Image" />
-                                }
-                            }
-                            <div class="info_other">
-                                <h4>@product.Name</h4>
-                                <p>
-                                    @(product.Description.Length > 100
-                                        ? product.Description.Substring(0, 100) + "..."
-                                        : product.Description)
-                                </p>
-                                <div class="row d-flex align-items-center justify-content-between">
-                                    <div class="col-5 col-sm-5 col-md-5 text-center btn_orther">Read More</div>
-                                    <div class="col-4 col-sm-4 col-md-4 col-md-4"></div>
-                                    <div title="Wishlist" class="col-1 col-sm-1 col-md-1 col-md-1 heart-container">
-                                        <form id="wishlistForm" method="post">
-                                            <input type="hidden" name="ProductId" id="ProductId" value="@product.Id" />
-                                            <input type="hidden" name="ProductName" id="ProductName" value="@product.Name" />
-                                            <input type="hidden" name="ProductPrice" id="ProductPrice" value="@product.Price" />
-
-                                            @{
-                                                string secondImageUrl2 = null;
-                                                int imageCount2 = 0;
-                                            }
-                                            @foreach (var link in product.Links)
-                                            {
-                                                if (link.Url.Contains("cloudinary"))
+                                                @{
+                                                    string secondImageUrl2 = null;
+                                                    int imageCount2 = 0;
+                                                }
+                                                @foreach (var link in product.Links)
                                                 {
-                                                    imageCount2++;
-                                                    if (imageCount2 == 2)
+                                                    if (link.Url.Contains("cloudinary"))
                                                     {
-                                                        secondImageUrl2 = link.Url;
-                                                        break;
+                                                        imageCount2++;
+                                                        if (imageCount2 == 2)
+                                                        {
+                                                            secondImageUrl2 = link.Url;
+                                                            break;
+                                                        }
                                                     }
                                                 }
-                                            }
-                                            <input type="hidden" name="ProductImage" id="ProductImage" value="@secondImageUrl2" />
+                                                <input type="hidden" name="ProductImage" id="ProductImage" value="@secondImageUrl2" />
 
-                                            <input type="checkbox" id="wishlistCheckbox" class="checkbox" onclick="addToWishList('@product.Id', '@product.Name', '@product.Price', '@secondImageUrl2')" />
-                                            <div class="svg-container">
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="svg-outline" viewBox="0 0 24 24">
-                                                    <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z"></path>
-                                                </svg>
-                                                <svg xmlns="http://www.w3.org/2000/svg" class="svg-filled" viewBox="0 0 24 24">
-                                                    <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z"></path>
-                                                </svg>
-                                                <svg xmlns="http://www.w3.org/2000/svg" height="100" width="100" class="svg-celebrate">
-                                                    <polygon points="10,10 20,20"></polygon>
-                                                    <polygon points="10,50 20,50"></polygon>
-                                                    <polygon points="20,80 30,70"></polygon>
-                                                    <polygon points="90,10 80,20"></polygon>
-                                                    <polygon points="90,50 80,50"></polygon>
-                                                    <polygon points="80,80 70,70"></polygon>
-                                                </svg>
-                                            </div>
-                                        </form>
+                                                <input type="checkbox" id="wishlistCheckbox" class="checkbox" onclick="addToWishList('@product.Id', '@product.Name', '@product.Price', '@secondImageUrl2')" />
+                                                <div class="svg-container">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" class="svg-outline" viewBox="0 0 24 24">
+                                                        <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Zm-3.585,18.4a2.973,2.973,0,0,1-3.83,0C4.947,16.006,2,11.87,2,8.967a4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,11,8.967a1,1,0,0,0,2,0,4.8,4.8,0,0,1,4.5-5.05A4.8,4.8,0,0,1,22,8.967C22,11.87,19.053,16.006,13.915,20.313Z"></path>
+                                                    </svg>
+                                                    <svg xmlns="http://www.w3.org/2000/svg" class="svg-filled" viewBox="0 0 24 24">
+                                                        <path d="M17.5,1.917a6.4,6.4,0,0,0-5.5,3.3,6.4,6.4,0,0,0-5.5-3.3A6.8,6.8,0,0,0,0,8.967c0,4.547,4.786,9.513,8.8,12.88a4.974,4.974,0,0,0,6.4,0C19.214,18.48,24,13.514,24,8.967A6.8,6.8,0,0,0,17.5,1.917Z"></path>
+                                                    </svg>
+                                                    <svg xmlns="http://www.w3.org/2000/svg" height="100" width="100" class="svg-celebrate">
+                                                        <polygon points="10,10 20,20"></polygon>
+                                                        <polygon points="10,50 20,50"></polygon>
+                                                        <polygon points="20,80 30,70"></polygon>
+                                                        <polygon points="90,10 80,20"></polygon>
+                                                        <polygon points="90,50 80,50"></polygon>
+                                                        <polygon points="80,80 70,70"></polygon>
+                                                    </svg>
+                                                </div>
+                                            </form>
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="view-count">
+                                    <i class="fa-solid fa-eye" style="color:black; width:20px; height:20px;"></i>
+                                    <span style="color:black;">@product.Interactions.NumberOfViews</span>
+                                </div>
+                                <div class="like-dislike-container">
+                                    <form asp-action="IncreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                                        <input type="hidden" name="productID" value="@product.Id" />
+                                        <span id="like-count-@product.Id" class="like-count" style="color:black;">@product.Interactions.NumberOfLikes</span>
+                                        <i class="fa-solid fa-thumbs-up like-icon" style="color:black; width:20px; height:20px;"></i>
+                                    </form>
+                                    <form asp-action="DecreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
+                                        <input type="hidden" name="productID" value="@product.Id" />
+                                        <span id="dislike-count-@product.Id" class="dislike-count" style="color:black;">@product.Interactions.NumberOfDisLikes</span>
+                                        <i class="fa-solid fa-thumbs-down dislike-icon" style="color:black; width:20px; height:20px;"></i>
+                                    </form>
+                                </div>
                             </div>
-                            <div class="view-count">
-                                <i class="fa-solid fa-eye" style="color:black; width:20px; height:20px;"></i>
-                                <span style="color:black;">@product.Interactions.NumberOfViews</span>
-                            </div>
-                            <div class="like-dislike-container">
-                                <form asp-action="IncreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
-                                    <input type="hidden" name="productID" value="@product.Id" />
-                                    <span id="like-count-@product.Id" class="like-count" style="color:black;">@product.Interactions.NumberOfLikes</span>
-                                    <i class="fa-solid fa-thumbs-up like-icon" style="color:black; width:20px; height:20px;"></i>
-                                </form>
-                                <form asp-action="DecreaseLikeProduct" asp-controller="Product" method="post" style="display:inline;">
-                                    <input type="hidden" name="productID" value="@product.Id" />
-                                    <span id="dislike-count-@product.Id" class="dislike-count" style="color:black;">@product.Interactions.NumberOfDisLikes</span>
-                                    <i class="fa-solid fa-thumbs-down dislike-icon" style="color:black; width:20px; height:20px;"></i>
-                                </form>
-                            </div>
+                            
                         </a>
                     }
                 }
