fix email, export

--- a/Project/Client/Views/Admin/CreateProduct.cshtml
+++ b/Project/Client/Views/Admin/CreateProduct.cshtml
@@ -119,11 +119,11 @@
     </div>
 
     <!-- WinrarPassword -->
-    <div class="form-group mt-2">
+    @* <div class="form-group mt-2">
         <label class="control-label">Rar Password - Password for game file</label>
         <input asp-for="@Model.winrarPassword" class="form-control" type="text" placeholder="Password of file game...."/>
         <span asp-validation-for="@Model.winrarPassword" class="text-danger"></span>
-    </div>
+    </div> *@
 
     <!-- Submit Button -->
     <div class="form-group mt-3 text-center">
