--- a/Project/Client/Views/User/UserDashboard.cshtml
+++ b/Project/Client/Views/User/UserDashboard.cshtml
@@ -178,7 +178,7 @@
                                     <a class="text-decoration-none" asp-controller="User" asp-action="EditProduct" asp-route-id="@product.Id">Edit</a> |
                                     <a class="text-decoration-none text-secondary">Analytics</a> |
                                     @* <a class="text-decoration-none text-secondary" href="">Widget</a> | *@
-                                    <a class="text-decoration-none text-secondary">More</a> |
+                                    <a class="text-decoration-none text-secondary">More</a>
                                     @* <a class="text-decoration-none text-secondary">More</a> | *@
                                     @* <a asp-controller="User" asp-action="DeleteProduct" asp-route-id="@product.Id" class="text-danger text-decoration-none">Delete</a> *@
                                 </small>
