--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -179,6 +179,7 @@
                                         ? product.Description.Substring(0, 100) + "..."
                                         : product.Description)
                                 </p>
+                                @* <p>@product.Price.ToString("N0")<span>VND</span></p> *@
                             </div>
                             <div class="row footeer_card">
                                 <div class="col-6 col-sm-6 col-md-6 btn_card">
@@ -307,6 +308,7 @@
                                     ? product.Description.Substring(0, 100) + "..."
                                     : product.Description)
                             </p>
+                            <p>@product.Price.ToString("N0")<span>VND</span></p>
                             <div class="row">
                                 <div class="col-md-6 btn_orther text-center">Read More</div>
                                 <div class="col-md-4"></div>
@@ -450,6 +452,7 @@
                                         ? product.Description.Substring(0, 100) + "..."
                                         : product.Description)
                                 </p>
+                                <p>@product.Price.ToString("N0")<span>VND</span></p>
                                 <div class="row d-flex align-items-center justify-content-between">
                                     <div class="col-6 col-sm-6 col-md-6 text-center btn_orther">Read More</div>
                                     <div class="col-2 colsm-2 col-md-2"></div>
@@ -572,6 +575,7 @@
                                         ? product.Description.Substring(0, 100) + "..."
                                         : product.Description)
                                 </p>
+                                <p>@product.Price.ToString("N0")<span>VND</span></p>
                                 <div class="row d-flex align-items-center justify-content-between">
                                     <div class="col-6 col-sm-6 col-md-6 text-center btn_orther">Read More</div>
                                     <div class="col-2 col-sm-2 col-md-2"></div>
@@ -692,6 +696,7 @@
                                         ? product.Description.Substring(0, 100) + "..."
                                         : product.Description)
                                 </p>
+                                <p>@product.Price.ToString("N0")<span>VND</span></p>
                                 <div class="row d-flex align-items-center justify-content-between">
                                     <div class="col-6 col-sm-6 col-md-6 text-center btn_orther">Read More</div>
                                     <div class="col-2 col-sm-2 col-md-2"></div>
@@ -818,6 +823,7 @@
                                         ? product.Description.Substring(0, 100) + "..."
                                         : product.Description)
                                 </p>
+                                <p>@product.Price.ToString("N0")<span>VND</span></p>
                                 <div class="row d-flex align-items-center justify-content-between">
                                     <div class="col-6 col-sm-6 col-md-6 text-center btn_orther">Read More</div>
                                     <div class="col-2 col-sm-2 col-md-2"></div>
