--- a/Project/Client/Views/Product/Product.cshtml
+++ b/Project/Client/Views/Product/Product.cshtml
@@ -158,6 +158,7 @@
                                             ? product.Description.Substring(0, 100) + "..."
                                             : product.Description)
                                     </p>
+                                    <p>@product.Price.ToString("N0")<span>VND</span></p>
                                     <div class="row d-flex align-items-center justify-content-between">
                                         <div class="col-5 col-sm-5 col-md-5 text-center btn_orther">Read More</div>
                                         <div class="col-4 col-sm-4 col-md-4 col-md-4"></div>
